<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResetPasswordFragment">


    <ImageButton
        android:id="@+id/resetPasswordBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="347dp"
        android:layout_marginBottom="600dp"
        android:backgroundTint="#00FFFFFF"
        android:importantForAccessibility="no"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="0dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetPasswordEpostaEditText"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/plaint_text_border"
        android:hint="@string/eposta"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/sendVerificationCodeButton"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="241dp"
        android:background="@drawable/button_radius"
        android:text="@string/dogrulama_kodu_gonder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEpostaEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>